# RunawayGuard

./: .gitignore  AGENTS.md  Makefile
config/: default.toml
daemon/: Cargo.toml  schema.sql
daemon/src/: collector.rs  config.rs  db.rs  detector.rs  executor.rs  learner.rs  lib.rs  main.rs  notifier.rs  protocol.rs  socket.rs
daemon/src/collector/: linux.rs
daemon/tests/: collector_tests.rs  config_tests.rs  db_tests.rs  integration_tests.rs
docs/: ARCHITECTURE.md
docs/plans/: 2026-01-30-gui-polish-design.md  2026-01-30-gui-polish-implementation.md  2026-01-30-implementation-plan.md  2026-01-30-runaway-guard-design.md  2026-02-02-daemon-lifecycle-binding.md
gui/: CMakeLists.txt
gui/resources/: resources.qrc
gui/src/: AlertTab.cpp  AlertTab.h  DaemonClient.cpp  DaemonClient.h  DaemonManager.cpp  DaemonManager.h  FormatUtils.cpp  FormatUtils.h  MainWindow.cpp  MainWindow.h  ProcessTab.cpp  ProcessTab.h  SettingsTab.cpp  SettingsTab.h  TrayIcon.cpp  TrayIcon.h  WhitelistTab.cpp  WhitelistTab.h  main.cpp
gui/tests/: test_daemon_client.cpp
packaging/: build-appimage.sh  build-deb.sh
packaging/AppDir/: AppRun  runaway-guard.desktop
packaging/deb/DEBIAN/: control  postinst  prerm
packaging/deb/usr/share/applications/: runaway-guard.desktop
scripts/: e2e_test.sh  runaway-guard.service
